@@ -24,8 +24,6 @@ import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import freemarker.template.Configuration;
-import freemarker.template.Template;
 import junit.framework.TestCase;
 
 import org.springframework.beans.TestBean;
@@ -41,133 +39,136 @@ import org.springframework.web.servlet.support.RequestContext;
 import org.springframework.web.servlet.theme.FixedThemeResolver;
 import org.springframework.web.servlet.view.DummyMacroRequestContext;
 
+import freemarker.template.Configuration;
+import freemarker.template.Template;
+
 /**
  * @author Darren Davison
  * @since 25.01.2005
  */
 public class FreeMarkerMacroTests extends TestCase {
 
-	private static final String TEMPLATE_FILE = "test.ftl";
+    private static final String TEMPLATE_FILE = "test.ftl";
 
 
-	private StaticWebApplicationContext wac;
+    private StaticWebApplicationContext wac;
 
-	private HttpServletRequest request;
+    private HttpServletRequest request;
 
-	private HttpServletResponse expectedResponse;
+    private HttpServletResponse expectedResponse;
 
-	private FreeMarkerConfigurer fc;
+    private FreeMarkerConfigurer fc;
 
 
-	public void setUp() throws Exception {
-		wac = new StaticWebApplicationContext();
-		wac.setServletContext(new MockServletContext());
+    public void setUp() throws Exception {
+        wac = new StaticWebApplicationContext();
+        wac.setServletContext(new MockServletContext());
 
-		//final Template expectedTemplate = new Template();
-		fc = new FreeMarkerConfigurer();
-		fc.setConfiguration(fc.createConfiguration());
-		fc.setPreferFileSystemAccess(false);
+        //final Template expectedTemplate = new Template();
+        fc = new FreeMarkerConfigurer();
+        fc.setPreferFileSystemAccess(false);
+        fc.afterPropertiesSet();
 
-		wac.getDefaultListableBeanFactory().registerSingleton("freeMarkerConfigurer", fc);
-		wac.refresh();
+        wac.getDefaultListableBeanFactory().registerSingleton("freeMarkerConfigurer", fc);
+        wac.refresh();
 
-		request = new MockHttpServletRequest();
-		request.setAttribute(DispatcherServlet.WEB_APPLICATION_CONTEXT_ATTRIBUTE, wac);
-		request.setAttribute(DispatcherServlet.LOCALE_RESOLVER_ATTRIBUTE, new AcceptHeaderLocaleResolver());
-		request.setAttribute(DispatcherServlet.THEME_RESOLVER_ATTRIBUTE, new FixedThemeResolver());
-		expectedResponse = new MockHttpServletResponse();
-	}
+        request = new MockHttpServletRequest();
+        request.setAttribute(DispatcherServlet.WEB_APPLICATION_CONTEXT_ATTRIBUTE, wac);
+        request.setAttribute(DispatcherServlet.LOCALE_RESOLVER_ATTRIBUTE, new AcceptHeaderLocaleResolver());
+        request.setAttribute(DispatcherServlet.THEME_RESOLVER_ATTRIBUTE, new FixedThemeResolver());
+        expectedResponse = new MockHttpServletResponse();
+    }
 
-	public void testExposeSpringMacroHelpers() throws Exception {
-		FreeMarkerView fv = new FreeMarkerView() {
-			protected void processTemplate(Template template, Map model, HttpServletResponse response) {
-				assertTrue(model.get(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE) instanceof RequestContext);
-				RequestContext rc = (RequestContext) model.get(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE);
-				BindStatus status = rc.getBindStatus("tb.name");
-				assertEquals("name", status.getExpression());
-				assertEquals("juergen", status.getValue());
-			}
-		};
-		fv.setUrl(TEMPLATE_FILE);
-		fv.setApplicationContext(wac);
-		fv.setExposeSpringMacroHelpers(true);
+    public void testExposeSpringMacroHelpers() throws Exception {
+        FreeMarkerView fv = new FreeMarkerView() {
+            protected void processTemplate(Template template, Map model, HttpServletResponse response) {
+                assertTrue(model.get(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE) instanceof RequestContext);
+                RequestContext rc = (RequestContext) model.get(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE);
+                BindStatus status = rc.getBindStatus("tb.name");
+                assertEquals("name", status.getExpression());
+                assertEquals("juergen", status.getValue());
+            }
+        };
+        fv.setUrl(TEMPLATE_FILE);
+        fv.setApplicationContext(wac);
+        fv.setExposeSpringMacroHelpers(true);
 
-		Map model = new HashMap();
-		model.put("tb", new TestBean("juergen", 99));
-		fv.render(model, request, expectedResponse);
-	}
+        Map model = new HashMap();
+        model.put("tb", new TestBean("juergen", 99));
+        fv.render(model, request, expectedResponse);
+    }
 
-	public void testSpringMacroRequestContextAttributeUsed() {
-		final String helperTool = "wrongType";
+    public void testSpringMacroRequestContextAttributeUsed() {
+        final String helperTool = "wrongType";
 
-		FreeMarkerView fv = new FreeMarkerView() {
-			protected void processTemplate(Template template, Map model, HttpServletResponse response) {
-				fail();
-			}
-		};
-		fv.setUrl(TEMPLATE_FILE);
-		fv.setApplicationContext(wac);
-		fv.setExposeSpringMacroHelpers(true);
+        FreeMarkerView fv = new FreeMarkerView() {
+            protected void processTemplate(Template template, Map model, HttpServletResponse response) {
+                fail();
+            }
+        };
+        fv.setUrl(TEMPLATE_FILE);
+        fv.setApplicationContext(wac);
+        fv.setExposeSpringMacroHelpers(true);
 
-		Map model = new HashMap();
-		model.put(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE, helperTool);
+        Map model = new HashMap();
+        model.put(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE, helperTool);
 
-		try {
-			fv.render(model, request, expectedResponse);
-		}
-		catch (Exception ex) {
-			assertTrue(ex instanceof ServletException);
-			assertTrue(ex.getMessage().indexOf(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE) > -1);
-		}
-	}
+        try {
+            fv.render(model, request, expectedResponse);
+        }
+        catch (Exception ex) {
+            assertTrue(ex instanceof ServletException);
+            assertTrue(ex.getMessage().indexOf(FreeMarkerView.SPRING_MACRO_REQUEST_CONTEXT_ATTRIBUTE) > -1);
+        }
+    }
 
-	public void testAllMacros() throws Exception {
-		DummyMacroRequestContext rc = new DummyMacroRequestContext();
-		HashMap msgMap = new HashMap();
-		msgMap.put("hello", "Howdy");
-		msgMap.put("world", "Mundo");
-		rc.setMsgMap(msgMap);
-		rc.setContextPath("/springtest");
+    public void testAllMacros() throws Exception {
+        DummyMacroRequestContext rc = new DummyMacroRequestContext();
+        HashMap msgMap = new HashMap();
+        msgMap.put("hello", "Howdy");
+        msgMap.put("world", "Mundo");
+        rc.setMsgMap(msgMap);
+        rc.setContextPath("/springtest");
 
-		TestBean tb = new TestBean("Darren", 99);
-		rc.setCommand(tb);
+        TestBean tb = new TestBean("Darren", 99);
+        rc.setCommand(tb);
 
-		HashMap names = new HashMap();
-		names.put("Darren", "Darren Davison");
-		names.put("John", "John Doe");
-		names.put("Fred", "Fred Bloggs");
+        HashMap names = new HashMap();
+        names.put("Darren", "Darren Davison");
+        names.put("John", "John Doe");
+        names.put("Fred", "Fred Bloggs");
 
-		Configuration config = fc.getConfiguration();
-		Map model = new HashMap();
-		model.put("command", tb);
-		model.put("springMacroRequestContext", rc);
-		model.put("nameOptionMap", names);
+        Configuration config = fc.getConfiguration();
+        Map model = new HashMap();
+        model.put("command", tb);
+        model.put("springMacroRequestContext", rc);
+        model.put("nameOptionMap", names);
 
-		StringWriter sw = new StringWriter();
-		Template t = config.getTemplate("test.ftl");
-		t.process(model, sw);
+        StringWriter sw = new StringWriter();
+        Template t = config.getTemplate("test.ftl");
+        t.process(model, sw);
 
-		// tokenize output and ignore whitespace
-		String output = sw.getBuffer().toString();
-		String[] tokens = StringUtils.tokenizeToStringArray(output, "\t\n");
+        // tokenize output and ignore whitespace
+        String output = sw.getBuffer().toString();
+        String[] tokens = StringUtils.tokenizeToStringArray(output, "\t\n");
 
-		for (int i = 0; i < tokens.length; i++) {
-			if (tokens[i].equals("NAME")) assertEquals("Darren", tokens[i + 1]);
-			if (tokens[i].equals("AGE")) assertEquals("99", tokens[i + 1]);
-			if (tokens[i].equals("MESSAGE")) assertEquals("Howdy Mundo", tokens[i + 1]);
-			if (tokens[i].equals("DEFAULTMESSAGE")) assertEquals("hi planet", tokens[i + 1]);
-			if (tokens[i].equals("URL")) assertEquals("/springtest/aftercontext.html", tokens[i + 1]);
-			if (tokens[i].equals("FORM1")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM2")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\" class=\"myCssClass\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM3")) assertEquals("<textarea id=\"name\" name=\"name\" >Darren</textarea>", tokens[i + 1]);
-			if (tokens[i].equals("FORM4")) assertEquals("<textarea id=\"name\" name=\"name\" rows=10 cols=30>Darren</textarea>", tokens[i + 1]);
-			//TODO verify remaining output (fix whitespace)
-			if (tokens[i].equals("FORM9")) assertEquals("<input type=\"password\" id=\"name\" name=\"name\" value=\"\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM10")) assertEquals("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM11")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM12")) assertEquals("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
-			if (tokens[i].equals("FORM13")) assertEquals("<input type=\"password\" id=\"name\" name=\"name\" value=\"\"", tokens[i + 1]);
-		}
-	}
+        for (int i = 0; i < tokens.length; i++) {
+            if (tokens[i].equals("NAME")) assertEquals("Darren", tokens[i + 1]);
+            if (tokens[i].equals("AGE")) assertEquals("99", tokens[i + 1]);
+            if (tokens[i].equals("MESSAGE")) assertEquals("Howdy Mundo", tokens[i + 1]);
+            if (tokens[i].equals("DEFAULTMESSAGE")) assertEquals("hi planet", tokens[i + 1]);
+            if (tokens[i].equals("URL")) assertEquals("/springtest/aftercontext.html", tokens[i + 1]);
+            if (tokens[i].equals("FORM1")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM2")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\" class=\"myCssClass\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM3")) assertEquals("<textarea id=\"name\" name=\"name\" >Darren</textarea>", tokens[i + 1]);
+            if (tokens[i].equals("FORM4")) assertEquals("<textarea id=\"name\" name=\"name\" rows=10 cols=30>Darren</textarea>", tokens[i + 1]);
+            //TODO verify remaining output (fix whitespace)
+            if (tokens[i].equals("FORM9")) assertEquals("<input type=\"password\" id=\"name\" name=\"name\" value=\"\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM10")) assertEquals("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM11")) assertEquals("<input type=\"text\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM12")) assertEquals("<input type=\"hidden\" id=\"name\" name=\"name\" value=\"Darren\"", tokens[i + 1]);
+            if (tokens[i].equals("FORM13")) assertEquals("<input type=\"password\" id=\"name\" name=\"name\" value=\"\"", tokens[i + 1]);
+        }
+    }
 
 }
